Page Layout Bug Removed
Bug related to page layout is removed.
and a new page is add for candidate info and voting for user.

--- a/header.css
+++ b/header.css
@@ -1,3 +1,7 @@
+body{
+    min-width: 1420px;
+}
+
 header{
     box-sizing: content-box;
     font-family: Lucida Grande;
