--- a/pages.css
+++ b/pages.css
@@ -1,3 +1,7 @@
+body{
+    min-width: 1420px;
+}
+
 .page-title{
     width: auto;
     height: 270px;
